--- a/Assets/Level/UI Assets/UXML/inventory-item.uxml
+++ b/Assets/Level/UI Assets/UXML/inventory-item.uxml
@@ -1,5 +1,5 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
-    <ui:VisualElement name="inventory-item" style="width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0); align-items: center; justify-content: flex-start; margin-left: auto; margin-right: auto;">
+    <ui:VisualElement name="inventory-item" style="width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0); align-items: center; justify-content: flex-start; margin-left: auto; margin-right: auto; visibility: hidden;">
         <ui:VisualElement name="item-image" style="width: 128px; height: 128px; background-color: rgb(255, 255, 255); margin-top: 10px;">
             <ui:Label text="17" display-tooltip-when-elided="true" name="item-quantity" style="position: absolute; bottom: -4px; right: -4px; background-color: rgb(0, 0, 0); height: 29px; width: 30px; padding-left: 5px; padding-right: 5px; padding-top: 5px; padding-bottom: 5px; color: rgb(207, 207, 207); -unity-text-align: middle-center; -unity-font-style: bold;" />
         </ui:VisualElement>
