--- a/Assets/Level/UI Assets/UXML/Station Market.uxml
+++ b/Assets/Level/UI Assets/UXML/Station Market.uxml
@@ -13,15 +13,19 @@
                 <ui:Label text="Buy Price" display-tooltip-when-elided="true" name="item-buy" style="width: 20%; -unity-font-style: bold; color: rgb(207, 207, 207);" />
                 <ui:Label text="Sell Price" display-tooltip-when-elided="true" name="sell-price" style="width: 20%; -unity-font-style: bold; color: rgb(214, 214, 214);" />
             </ui:VisualElement>
-            <ui:ListView focusable="true" show-border="false" selection-type="Single" show-foldout-header="false" show-add-remove-footer="false" name="market-list" horizontal-scrolling="false" show-bound-collection-size="false" style="height: 100%; margin-top: 5px; overflow: hidden; width: 100%;" />
+            <ui:ListView focusable="true" show-border="false" selection-type="None" show-foldout-header="false" show-add-remove-footer="false" name="market-list" horizontal-scrolling="false" show-bound-collection-size="false" style="height: 100%; margin-top: 5px; overflow: hidden; width: 100%;" />
         </ui:VisualElement>
-        <ui:VisualElement style="height: 100px; margin-left: 20px; margin-right: 20px; margin-top: 20px; margin-bottom: 20px; background-color: rgb(48, 48, 48); flex-direction: row; align-items: center;">
-            <ui:Label text="Item Name" display-tooltip-when-elided="true" name="item-name" style="width: 16.6%; color: rgb(212, 212, 212);" />
-            <ui:Label text="&lt;color=&quot;green&quot;&gt;+35.8%" display-tooltip-when-elided="true" name="item-difference" style="width: 16.6%;" />
+        <ui:VisualElement name="none-display" style="height: 100px; margin-left: 20px; margin-right: 20px; margin-top: 20px; margin-bottom: 20px; background-color: rgb(48, 48, 48); flex-direction: row; align-items: center;">
+            <ui:Label text="Please select an item" display-tooltip-when-elided="true" style="margin-left: auto; margin-right: auto; -unity-font-style: bold; font-size: 30px; color: rgba(212, 212, 212, 255);" />
+        </ui:VisualElement>
+        <ui:VisualElement name="purchase-display" style="height: 100px; margin-left: 20px; margin-right: 20px; margin-top: 20px; margin-bottom: 20px; background-color: rgb(48, 48, 48); flex-direction: row; align-items: center; display: none;">
+            <ui:Label text="Item Name" display-tooltip-when-elided="true" name="bottom-item-name" style="width: 16.6%; color: rgb(212, 212, 212);" />
+            <ui:Label text="&lt;color=&quot;green&quot;&gt;+35.8%" display-tooltip-when-elided="true" name="bottom-item-difference" style="width: 16.6%;" />
             <ui:VisualElement style="width: 16.6%; flex-direction: row;">
-                <ui:Label text="$156" display-tooltip-when-elided="true" name="item-buy-price" style="width: 50%; color: rgb(209, 209, 209);" />
+                <ui:Label text="$156" display-tooltip-when-elided="true" name="bottom-item-buy-price" style="width: 50%; color: rgb(209, 209, 209);" />
+                <ui:Label text="Label" display-tooltip-when-elided="true" name="bottom-item-quantity" style="color: rgb(207, 207, 207);" />
             </ui:VisualElement>
-            <ui:SliderInt picking-mode="Ignore" value="42" high-value="100" style="width: 16.6%; color: rgb(207, 207, 207);" />
+            <ui:SliderInt picking-mode="Ignore" value="42" high-value="100" name="bottom-slider" style="width: 16.6%; color: rgb(207, 207, 207);" />
             <ui:Button text="Buy" display-tooltip-when-elided="true" name="buy-button" style="width: 10%; margin-left: auto; margin-right: auto; color: rgb(226, 226, 226); background-color: rgb(91, 91, 91);" />
         </ui:VisualElement>
         <ui:Button text="Back" display-tooltip-when-elided="true" name="back-button" style="position: absolute; bottom: 2%; left: 1%; height: 12px;" />
