--- a/Assets/Level/UI Assets/UXML/market-item.uxml
+++ b/Assets/Level/UI Assets/UXML/market-item.uxml
@@ -1,5 +1,6 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <ui:VisualElement style="flex-direction: row; width: 100%;">
+    <Style src="project://database/Assets/Level/UI%20Assets/USS/marketItem.uss?fileID=7433441132597879392&amp;guid=90a208e2b3677574895c8a657ea97fb6&amp;type=3#marketItem" />
+    <ui:VisualElement name="main-visual" class="active" style="flex-direction: row; width: 100%;">
         <ui:Label text="Item Name" display-tooltip-when-elided="true" name="item-name" style="width: 20%; -unity-font-style: normal; color: rgb(209, 206, 206);" />
         <ui:Label text="Type" display-tooltip-when-elided="true" name="item-type" style="width: 20%; -unity-font-style: normal; color: rgb(209, 209, 209);" />
         <ui:Label text="Quantity" display-tooltip-when-elided="true" name="item-quantity" style="width: 20%; -unity-font-style: normal; color: rgb(212, 212, 212);" />
