--- a/Assets/Level/UI Assets/UXML/Station Market.uxml
+++ b/Assets/Level/UI Assets/UXML/Station Market.uxml
@@ -1,4 +1,5 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
+    <ui:Template name="Item Transfer" src="project://database/Assets/Level/UI%20Assets/UXML/Item%20Transfer.uxml?fileID=9197481963319205126&amp;guid=2fd1afea440a556458e3be429ed77398&amp;type=3#Item Transfer" />
     <Style src="project://database/Assets/Level/UI%20Assets/USS/station.uss?fileID=7433441132597879392&amp;guid=05aee3c6c1ebc1b4fbc97e06ba474bae&amp;type=3#station" />
     <ui:VisualElement name="main-body" style="position: absolute; left: 25%; top: 25%; right: 25%; bottom: 25%; background-color: rgb(70, 70, 70); border-left-color: rgb(255, 138, 30); border-right-color: rgb(255, 138, 30); border-top-color: rgb(255, 138, 30); border-bottom-color: rgb(255, 138, 30); border-left-width: 1px; border-right-width: 1px; border-top-width: 1px; border-bottom-width: 1px;">
         <ui:VisualElement name="header-element" style="width: 100%; flex-direction: row; justify-content: space-between;">
@@ -16,7 +17,7 @@
             <ui:ListView focusable="true" show-border="false" selection-type="None" show-foldout-header="false" show-add-remove-footer="false" name="market-list" horizontal-scrolling="false" show-bound-collection-size="false" style="height: 100%; margin-top: 5px; overflow: hidden; width: 100%;" />
         </ui:VisualElement>
         <ui:VisualElement name="none-display" style="height: 100px; margin-left: 20px; margin-right: 20px; margin-top: 20px; margin-bottom: 20px; background-color: rgb(48, 48, 48); flex-direction: row; align-items: center;">
-            <ui:Label text="Please select an item" display-tooltip-when-elided="true" style="margin-left: auto; margin-right: auto; -unity-font-style: bold; font-size: 30px; color: rgba(212, 212, 212, 255);" />
+            <ui:Label text="Please select an item" display-tooltip-when-elided="true" style="margin-left: auto; margin-right: auto; -unity-font-style: bold; font-size: 30px; color: rgb(212, 212, 212);" />
         </ui:VisualElement>
         <ui:VisualElement name="purchase-display" style="height: 100px; margin-left: 20px; margin-right: 20px; margin-top: 20px; margin-bottom: 20px; background-color: rgb(48, 48, 48); flex-direction: row; align-items: center; display: none;">
             <ui:Label text="Item Name" display-tooltip-when-elided="true" name="bottom-item-name" style="width: 16.6%; color: rgb(212, 212, 212);" />
@@ -46,4 +47,5 @@
             <ui:ListView focusable="true" name="storage-list" selection-type="None" style="height: 220px; margin-top: 10px; background-color: rgb(101, 101, 101); padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0;" />
         </ui:VisualElement>
     </ui:VisualElement>
+    <ui:Instance template="Item Transfer" name="item-transfer" style="visibility: hidden;" />
 </ui:UXML>
