Added color to tooltips

--- a/Assets/Level/UI Assets/UXML/item-stat.uxml
+++ b/Assets/Level/UI Assets/UXML/item-stat.uxml
@@ -1,3 +1,3 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
-    <ui:Label text="Label" display-tooltip-when-elided="true" name="item-stat" style="white-space: normal;" />
+    <ui:Label text="test" display-tooltip-when-elided="true" name="item-stat" style="white-space: normal;" />
 </ui:UXML>
